--- a/ListProcessing/ListProcessing/ListProcessing.csproj
+++ b/ListProcessing/ListProcessing/ListProcessing.csproj
@@ -42,9 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\CommandDispatcher.cs" />
+    <Compile Include="Core\CommandInterpreter.cs" />
     <Compile Include="Core\Commands\AppendCommand.cs" />
+    <Compile Include="Core\Commands\CountCommand.cs" />
+    <Compile Include="Core\Commands\DeleteCommand.cs" />
     <Compile Include="Core\Engine.cs" />
+    <Compile Include="Core\Commands\InsertCommand.cs" />
+    <Compile Include="Core\Commands\PrependCommand.cs" />
+    <Compile Include="Core\Commands\ReverseCommand.cs" />
+    <Compile Include="Core\Commands\RollLeftCommand.cs" />
+    <Compile Include="Core\Commands\RollRightCommand.cs" />
+    <Compile Include="Core\Commands\SortCommand.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
